--- a/Async Race/public/index.html
+++ b/Async Race/public/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script src="main.js"></script>
+    <link rel="stylesheet" href="main.css" />
   </body>
 </html>
